--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "rstool"
 version = "0.1.0"
 edition = "2021"
+authors = ["lopo<lopo@zju.edu.cn>"]
+description = "Some small tools written in rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1.7.0"
