feat: serve (partial: path resolve)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ description = "a small tools written in rust"
 
 [dependencies]
 clap = { version = "4.0.26", features = ["derive"] }
+ipconfig = "0.3.1"
 regex = "1.7.0"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
+rocket = "0.5.0-rc.2"
 serde = { version = "1.0.147", features = ["derive"] }
