--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rstool"
 version = "0.1.0"
 edition = "2021"
 authors = ["lopo<lopo@zju.edu.cn>"]
-description = "a small tools written in rust"
+description = "a cli tools written in rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
