--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = "a cli tools written in rust"
 
 [dependencies]
 clap = { version = "4.0.26", features = ["derive"] }
+font-kit = { version = "0.11.0" }
 ipconfig = "0.3.1"
 regex = "1.7.0"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
