--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ regex = "1.7.0"
 reqwest = { version = "0.11.13", features = ["blocking", "json"] }
 rocket = "0.5.0-rc.2"
 serde = { version = "1.0.147", features = ["derive"] }
+webbrowser = "0.8.10"
