refactor: refactor Commands::Hash

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,16 @@ description = "a cli tools written in rust"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# cli usage
 clap = { version = "4.0.26", features = ["derive"] }
-font-kit = { version = "0.11.0" }
-ipconfig = "0.3.1"
-regex = "1.7.0"
-reqwest = { version = "0.11.13", features = ["blocking", "json"] }
-rocket = "0.5.0-rc.2"
-serde = { version = "1.0.147", features = ["derive"] }
+
+# Commands::Doc
 webbrowser = "0.8.10"
+# Commands::Hash
+crypto = "0.5.1"
+regex = "1.7.0"
+# Commands::Serve
+ipconfig = "0.3.1"
+rocket = "0.5.0-rc.2"
+# ...
+font-kit = { version = "0.11.0" }
