--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,11 @@ clap = { version = "4.0.26", features = ["derive"] }
 # Commands::Doc
 webbrowser = "0.8.10"
 # Commands::Hash
+md-5 = "0.10.5"
+ripemd = "0.1.3"
+sha1 = "0.10.5"
 sha2 = "0.10.7"
+sha3 = "0.10.8"
 # Commands::Serve
 ipconfig = "0.3.1"
 rocket = "0.5.0-rc.2"
