--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ clap = { version = "4.0.26", features = ["derive"] }
 webbrowser = "0.8.10"
 # Commands::Extract
 flate2 = "1.0.26"
+sevenz-rust = "0.4.3"
 tar = "0.4.39"
+# unrar = "0.5.1"
 zip-extract = "0.1.2"
 # Commands::Hash
 md-5 = "0.10.5"
