--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ edition = "2021"
 authors = ["lopo<lopo@zju.edu.cn>"]
 description = "a cli tools written in rust"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-# cli usage
+# node-addon support
+napi = { version = "2.13.2", default-features = false, features = ["napi4"] }
+napi-derive = "2.13.0"
+
+# cli support
 clap = { version = "4.0.26", features = ["derive"] }
 
 # Commands::Doc
@@ -37,3 +42,9 @@ rocket = "0.5.0-rc.2"
 
 # ...
 font-kit = { version = "0.11.0" }
+
+[build-dependencies]
+napi-build = "2.0.1"
+
+[profile.release]
+#lto = true  #  Link-Time Optimization
